array.island.Island.scala.error
Erreur de compilation :
Island:11: error: ']' expected but ':' found.
  island(num [i:])
               ^